Fix layout architecture: align Incident Context with D1–D8 and restore Run Analysis visibility

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
   <main class="workspace">
 
     <!-- ROW 1 -->
-    <section class="row top-row">
+    <section class="main-row">
 
       <!-- INCIDENT CONTEXT (LEFT) -->
       <div class="panel incident-context">
@@ -67,7 +67,7 @@
         <h2>D1–D8</h2>
 
         <div class="phases-scroll">
-          <div class="phase d1 d12">
+          <div class="phase d1">
             <h3>Problem Initiation (D1–D2)</h3>
 
             <label for="problem_description">Problem Description</label>
@@ -152,7 +152,7 @@
     </section>
 
     <!-- ROW 2 -->
-    <section class="row bottom-row">
+    <section class="bottom-row">
 
       <!-- RUN ANALYSIS -->
       <div class="panel run-ai-panel">
