Fix QRQC phase wall: keep all phases on one horizontal row and add internal scroll for D1–D2

--- a/ui/index.html
+++ b/ui/index.html
@@ -67,7 +67,7 @@
     <!-- D1–D2 (WIDE CARD) -->
     <div class="phase d1 phase-wide">
       <h3>Problem Initiation (D1–D2)</h3>
-
+      <div class ="phase-content">
       <label for="problem_description">Problem Description</label>
       <textarea id="problem_description"
         name="phases.D1_D2.data.problem_description"
@@ -76,6 +76,7 @@
 
       <div class="form-grid">
         <!-- unchanged form content -->
+      </div>
       </div>
     </div>
 
