--- a/ui/index.html
+++ b/ui/index.html
@@ -1,194 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI-Assisted Decision Support – Collaborative Intelligence Workspace</title>
-  <link rel="stylesheet" href="./styles.css" />
+  <title>AI-Assisted Incident & Problem Management</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
 
-  <header class="topbar">
-    <h1>AI-Assisted Decision Support</h1>
-    <p>Collaborative Intelligence Workspace</p>
-  </header>
+<div class="board">
 
-  <main class="workspace">
+<!-- ================= INCIDENT OVERVIEW ================= -->
+<div class="column column-d0">
+  <div class="column-header">Incident Overview & Evidence</div>
 
-    <!-- ROW 1 -->
-    <section class="main-row">
+  <div class="column-content">
+    <div class="card">
+      <label>Incident / Case ID</label>
+      <input data-field="case.case_number">
 
-      <!-- INCIDENT CONTEXT (LEFT) -->
-      <div class="panel incident-context">
-        <h2>Incident Context</h2>
+      <label>Status</label>
+      <input data-field="case.status">
 
-        <div class="context-grid">
-          <div><strong>Case ID:</strong> INC-2026-001</div>
-          <div><strong>Status:</strong> Open</div>
-          <div><strong>Phase:</strong> Analysis</div>
-          <div><strong>Location:</strong> Vienna</div>
-          <div><strong>Severity:</strong> High</div>
-          <div><strong>Owner:</strong> Team A</div>
-        </div>
+      <label>Opening Date</label>
+      <input type="date" data-field="case.opening_date">
 
-        <h3 class="subheading">Evidence</h3>
-        <ul class="evidence-list">
-          <li>incident_photo_01.jpg</li>
-          <li>inspection_report.pdf</li>
-        </ul>
+      <label>Closure Date</label>
+      <input type="date" data-field="case.closure_date" disabled>
+    </div>
 
-        <!-- ✅ WORKING UPLOAD BUTTONS -->
-        <div class="upload-actions">
+    <div class="card">
+      <button data-action="upload-evidence">Upload Evidence</button>
+      <p class="helper-text">
+        Upload photos or relevant documents.  
+        Files are stored securely via FastAPI in Blob Storage.
+      </p>
+    </div>
 
-          <label class="secondary file-button">
-            Upload Photo
-            <input type="file" accept="image/*">
-          </label>
+    <div class="card" data-view="evidence">
+      <p>No evidence uploaded yet.</p>
+    </div>
+  </div>
 
-          <label class="secondary file-button">
-            Upload Document
-            <input type="file" accept=".pdf,.doc,.docx,.xls,.xlsx">
-          </label>
-
-        </div>
-      </div>
-
-
-      <!-- D1–D8 MAIN WORK AREA (RIGHT) -->
-<div class="panel phases-container">
-  <h2>D1–D8</h2>
-
-  <!-- 🔑 ONE horizontal scroll container -->
-  <div class="phases-scroll">
-
-    <!-- D1–D2 (WIDE CARD) -->
- <div class="phase d1 phase-wide">
-  <h3>Problem Initiation (D1–D2)</h3>
-
-
-
-    <label for="problem_description">Problem Description</label>
-    <textarea id="problem_description"
-      name="phases.D1_D2.data.problem_description"
-      placeholder="Describe what happened (WHAT). Do not analyze causes here.">
-    </textarea>
-
-    <div class="form-grid">
-
-      <div>
-        <label for="country">Country</label>
-        <input id="country" type="text"
-          name="phases.D1_D2.data.organization.country"
-          placeholder="e.g. Austria">
-      </div>
-
-      <div>
-        <label for="site">Site / Plant</label>
-        <input id="site" type="text"
-          name="phases.D1_D2.data.organization.site"
-          placeholder="e.g. Vienna – Plant 1">
-      </div>
-
-      <div class="full-width">
-        <label for="department">Department</label>
-        <input id="department" type="text"
-          name="phases.D1_D2.data.organization.department"
-          placeholder="e.g. Production / Quality">
-      </div>
-
-      <div class="full-width">
-        <label for="team_members">Team Members</label>
-        <textarea id="team_members"
-          name="phases.D1_D2.data.team_members"
-          placeholder="One person per line: Name – Role – Function">
-        </textarea>
-      </div>
-
-      <div>
-        <label for="case_number">Case Number</label>
-        <input id="case_number" type="text"
-          name="case.case_number"
-          placeholder="e.g. INC-2026-001">
-      </div>
-
-      <div>
-        <label for="opening_date">Opening Date</label>
-        <input id="opening_date" type="date"
-          name="case.opening_date">
-      </div>
-
-      <div>
-        <label for="closure_date">Closure Date</label>
-        <input id="closure_date" type="date"
-          name="case.closure_date">
-      </div>
-
-    
+  <div class="column-description">
+    Use this section to manage general incident information and attach evidence.
   </div>
 </div>
 
+<!-- ================= PROBLEM INITIATION ================= -->
+<div class="column column-d1d2" data-phase="D1_D2">
+  <div class="column-header">Problem Initiation</div>
 
-    <!-- D3 -->
-    <div class="phase d3">
-      <h3>D3 – Analysis</h3>
-      <textarea name="phases.D3.data.notes"
-        placeholder="Hypotheses, 5-Why analysis, evidence links...">
-      </textarea>
+  <div class="column-content">
+    <div class="card">
+      <label>Problem Description</label>
+      <textarea data-field="phases.D1_D2.data.problem_description"></textarea>
     </div>
 
-    <!-- D4 -->
-    <div class="phase d4">
-      <h3>D4 – Corrective Actions</h3>
-      <textarea name="phases.D4.data.notes"
-        placeholder="Corrective actions, owners, due dates...">
-      </textarea>
+    <div class="card two-col">
+      <div>
+        <label>Country</label>
+        <input data-field="phases.D1_D2.data.organization.country">
+      </div>
+      <div>
+        <label>Site / Location</label>
+        <input data-field="phases.D1_D2.data.organization.site">
+      </div>
     </div>
 
-    <!-- D5 -->
-    <div class="phase d5">
-      <h3>D5 – Validation</h3>
-      <textarea name="phases.D5.data.notes"
-        placeholder="Validation method, KPIs, results...">
-      </textarea>
+    <div class="card">
+      <label>Department / Area</label>
+      <input data-field="phases.D1_D2.data.organization.department">
     </div>
 
-    <!-- D6–D8 will follow same pattern -->
+    <div class="card">
+      <label>Involved People / Teams</label>
+      <textarea data-field="phases.D1_D2.data.team_members"></textarea>
+    </div>
+  </div>
 
+  <div class="column-description">
+    Describe the problem factually and define the context.  
+    The closure date is managed only in the **Prevention & Closure** phase.
   </div>
 </div>
 
+<!-- ================= PROBLEM DEFINITION ================= -->
+<div class="column column-d3" data-phase="D3">
+  <div class="column-header">Problem Definition</div>
 
-    </section>
+  <div class="column-content">
+    <div class="card"><label>What happened?</label><textarea data-field="phases.D3.data.what_happened"></textarea></div>
+    <div class="card"><label>Why is this a problem?</label><textarea data-field="phases.D3.data.why_is_it_a_problem"></textarea></div>
+    <div class="card"><label>When did it occur?</label><input data-field="phases.D3.data.when"></div>
+    <div class="card"><label>Who was involved?</label><input data-field="phases.D3.data.who"></div>
+    <div class="card"><label>Where did it occur?</label><input data-field="phases.D3.data.where"></div>
+    <div class="card"><label>How was it identified?</label><textarea data-field="phases.D3.data.how"></textarea></div>
+    <div class="card"><label>How many / how much impact?</label><input data-field="phases.D3.data.how_many_or_how_much"></div>
+  </div>
 
-    <!-- ROW 2 -->
-    <section class="bottom-row">
+  <div class="column-description">
+    Build a shared factual understanding of the problem before analysis begins.
+  </div>
+</div>
 
-      <!-- RUN ANALYSIS -->
-      <div class="panel run-ai-panel">
-        <h3>Run Analysis</h3>
-        <p>Trigger AI-assisted reasoning based on the current incident and inputs.</p>
-        <button class="primary">Run AI Analysis</button>
-      </div>
+<!-- ================= IMMEDIATE ACTIONS ================= -->
+<div class="column column-d4" data-phase="D4">
+  <div class="column-header">Immediate Actions</div>
 
-      <!-- AI INSIGHTS -->
-      <div class="panel ai-output">
-        <h3>AI-Assisted Insights</h3>
-        <p><strong>Hypothesis:</strong> Process parameter drift caused by delayed maintenance.</p>
-        <p><strong>Confidence:</strong> 0.72 (based on similar incidents)</p>
-        <ul>
-          <li>Recalibrate monitoring thresholds</li>
-          <li>Reduce maintenance interval</li>
-          <li>Introduce early warning alerts</li>
-        </ul>
-      </div>
+  <div class="column-content">
+    <div class="card">
+      <table>
+        <thead>
+          <tr>
+            <th>Action</th>
+            <th>Responsible</th>
+            <th>Due Date</th>
+            <th>Actual Date</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- 5 static rows -->
+          <tr>
+            <td><input data-field="phases.D4.data.containment_actions.0.action_description"></td>
+            <td><input data-field="phases.D4.data.containment_actions.0.responsible"></td>
+            <td><input type="date" data-field="phases.D4.data.containment_actions.0.due_date"></td>
+            <td><input type="date" data-field="phases.D4.data.containment_actions.0.action_date"></td>
+          </tr>
+          <tr>
+            <td><input data-field="phases.D4.data.containment_actions.1.action_description"></td>
+            <td><input data-field="phases.D4.data.containment_actions.1.responsible"></td>
+            <td><input type="date" data-field="phases.D4.data.containment_actions.1.due_date"></td>
+            <td><input type="date" data-field="phases.D4.data.containment_actions.1.action_date"></td>
+          </tr>
+          <tr>
+            <td><input data-field="phases.D4.data.containment_actions.2.action_description"></td>
+            <td><input data-field="phases.D4.data.containment_actions.2.responsible"></td>
+            <td><input type="date" data-field="phases.D4.data.containment_actions.2.due_date"></td>
+            <td><input type="date" data-field="phases.D4.data.containment_actions.2.action_date"></td>
+          </tr>
+          <tr>
+            <td><input data-field="phases.D4.data.containment_actions.3.action_description"></td>
+            <td><input data-field="phases.D4.data.containment_actions.3.responsible"></td>
+            <td><input type="date" data-field="phases.D4.data.containment_actions.3.due_date"></td>
+            <td><input type="date" data-field="phases.D4.data.containment_actions.3.action_date"></td>
+          </tr>
+          <tr>
+            <td><input data-field="phases.D4.data.containment_actions.4.action_description"></td>
+            <td><input data-field="phases.D4.data.containment_actions.4.responsible"></td>
+            <td><input type="date" data-field="phases.D4.data.containment_actions.4.due_date"></td>
+            <td><input type="date" data-field="phases.D4.data.containment_actions.4.action_date"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-    </section>
+  <div class="column-description">
+    Define short-term actions to limit impact and protect stakeholders.
+  </div>
+</div>
 
-  </main>
+<!-- ================= AI ================= -->
+<div class="column column-ai">
+  <div class="column-header">AI Analysis</div>
 
+  <div class="column-content">
+    <div class="card">
+      <button data-action="run-ai-agent">Run AI Analysis</button>
+    </div>
+  </div>
+
+  <div class="column-description">
+    Agent Status: idle
+  </div>
+</div>
+
+</div>
 </body>
-
 </html>
