Fix scrollbars and widen action fields in incident management UI

--- a/ui/index.html
+++ b/ui/index.html
@@ -3,40 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <title>AI-Assisted Incident & Problem Management</title>
-  <link rel="stylesheet" href="styles.css" />
+
+  <!-- cache-busted on purpose -->
+  <link rel="stylesheet" href="styles.css?v=1.0.0">
 </head>
 <body>
 
 <div class="board">
 
   <!-- INCIDENT OVERVIEW -->
-  <div class="column column-d0">
+  <div class="column">
     <div class="column-header">Incident Overview & Evidence</div>
 
     <div class="column-content">
       <div class="card">
         <label>Incident / Case ID</label>
-        <input data-field="case.case_number">
+        <input>
 
         <label>Status</label>
-        <input data-field="case.status">
+        <input>
 
         <label>Opening Date</label>
-        <input type="date" data-field="case.opening_date">
+        <input type="date">
 
         <label>Closure Date</label>
-        <input type="date" data-field="case.closure_date" disabled>
+        <input type="date" disabled>
       </div>
 
       <div class="card">
-        <button data-action="upload-evidence">Upload Evidence</button>
+        <button>Upload Evidence</button>
         <p class="helper-text">
-          Upload photos or documents. Files are stored securely via FastAPI.
+          Upload photos or documents. Stored securely via backend service.
         </p>
       </div>
 
-      <div class="card" data-view="evidence">
-        <p>No evidence uploaded yet.</p>
+      <div class="card">
+        No evidence uploaded yet.
       </div>
     </div>
 
@@ -46,67 +48,67 @@
   </div>
 
   <!-- PROBLEM INITIATION -->
-  <div class="column column-d1d2" data-phase="D1_D2">
+  <div class="column">
     <div class="column-header">Problem Initiation</div>
 
     <div class="column-content">
       <div class="card">
         <label>Problem Description</label>
-        <textarea data-field="phases.D1_D2.data.problem_description"></textarea>
+        <textarea></textarea>
       </div>
 
       <div class="card two-col">
         <div>
           <label>Country</label>
-          <input data-field="phases.D1_D2.data.organization.country">
+          <input>
         </div>
         <div>
           <label>Site / Location</label>
-          <input data-field="phases.D1_D2.data.organization.site">
+          <input>
         </div>
       </div>
 
       <div class="card">
         <label>Department / Area</label>
-        <input data-field="phases.D1_D2.data.organization.department">
+        <input>
       </div>
 
       <div class="card">
         <label>Involved People / Teams</label>
-        <textarea data-field="phases.D1_D2.data.team_members"></textarea>
+        <textarea></textarea>
       </div>
     </div>
 
     <div class="column-description">
-      Define the problem factually. Closure date is managed only in Prevention & Closure.
+      Describe the problem factually and define the context.
     </div>
   </div>
 
   <!-- PROBLEM DEFINITION -->
-  <div class="column column-d3" data-phase="D3">
+  <div class="column">
     <div class="column-header">Problem Definition</div>
 
     <div class="column-content">
-      <div class="card"><label>What happened?</label><textarea data-field="phases.D3.data.what_happened"></textarea></div>
-      <div class="card"><label>Why is this a problem?</label><textarea data-field="phases.D3.data.why_is_it_a_problem"></textarea></div>
-      <div class="card"><label>When?</label><input data-field="phases.D3.data.when"></div>
-      <div class="card"><label>Who?</label><input data-field="phases.D3.data.who"></div>
-      <div class="card"><label>Where?</label><input data-field="phases.D3.data.where"></div>
-      <div class="card"><label>How?</label><textarea data-field="phases.D3.data.how"></textarea></div>
-      <div class="card"><label>Impact (how many / how much)?</label><input data-field="phases.D3.data.how_many_or_how_much"></div>
+      <div class="card"><label>What happened?</label><textarea></textarea></div>
+      <div class="card"><label>Why is this a problem?</label><textarea></textarea></div>
+      <div class="card"><label>When did it occur?</label><input></div>
+      <div class="card"><label>Who was involved?</label><input></div>
+      <div class="card"><label>Where did it occur?</label><input></div>
+      <div class="card"><label>How was it identified?</label><textarea></textarea></div>
+      <div class="card"><label>Impact (how many / how much)?</label><input></div>
     </div>
 
     <div class="column-description">
-      Build a shared, factual understanding before analysis.
+      Build a shared factual understanding before analysis begins.
     </div>
   </div>
 
   <!-- IMMEDIATE ACTIONS -->
-  <div class="column column-d4" data-phase="D4">
+  <div class="column">
     <div class="column-header">Immediate Actions</div>
 
     <div class="column-content">
-      <div class="card table-card">
+      <div class="card">
         <table class="wide-table">
           <thead>
             <tr>
@@ -118,22 +120,22 @@
           </thead>
           <tbody>
             <tr>
-              <td><input data-field="phases.D4.data.containment_actions.0.action_description"></td>
-              <td><input data-field="phases.D4.data.containment_actions.0.responsible"></td>
-              <td><input type="date" data-field="phases.D4.data.containment_actions.0.due_date"></td>
-              <td><input type="date" data-field="phases.D4.data.containment_actions.0.action_date"></td>
+              <td><input></td>
+              <td><input></td>
+              <td><input type="date"></td>
+              <td><input type="date"></td>
             </tr>
             <tr>
-              <td><input data-field="phases.D4.data.containment_actions.1.action_description"></td>
-              <td><input data-field="phases.D4.data.containment_actions.1.responsible"></td>
-              <td><input type="date" data-field="phases.D4.data.containment_actions.1.due_date"></td>
-              <td><input type="date" data-field="phases.D4.data.containment_actions.1.action_date"></td>
+              <td><input></td>
+              <td><input></td>
+              <td><input type="date"></td>
+              <td><input type="date"></td>
             </tr>
             <tr>
-              <td><input data-field="phases.D4.data.containment_actions.2.action_description"></td>
-              <td><input data-field="phases.D4.data.containment_actions.2.responsible"></td>
-              <td><input type="date" data-field="phases.D4.data.containment_actions.2.due_date"></td>
-              <td><input type="date" data-field="phases.D4.data.containment_actions.2.action_date"></td>
+              <td><input></td>
+              <td><input></td>
+              <td><input type="date"></td>
+              <td><input type="date"></td>
             </tr>
           </tbody>
         </table>
@@ -146,12 +148,12 @@
   </div>
 
   <!-- AI PANEL -->
-  <div class="column column-ai">
+  <div class="column ai-column">
     <div class="column-header">AI Analysis</div>
 
     <div class="column-content">
       <div class="card">
-        <button data-action="run-ai-agent">Run AI Analysis</button>
+        <button>Run AI Analysis</button>
       </div>
     </div>
 
